mType/tests/testFiles/error/error/classUndefinedMember.mt
class TestClass {
    int value;
}
TestClass obj;
int x = obj.undefinedField;